# abella

./: .gitignore  .merlin  .ocamlinit  .ocp-indent  CHANGELOG  CHANGES  CHANGES.md  Makefile  OMakefile  OMakeroot  PLUGINREADME  README  README.md  TACTREADME  TODO.support.org  _tags  abella.opam  configure.ac  dist-makefile  dune-project  myocamlbuild.ml  notes.txt
.github/workflows/: check-tests.yml
emacs/: README  abella.el  lprolog-mod.el  lprolog-mode.el
emacs/pg/: Makefile  README.markdown  abella-syntax.el  abella.el
examples/: .gitignore  Makefile  OMakefile  OMakeroot  ackermann.thm  add.mod  add.sig  add.thm  bottom.thm  cascade.thm  ccs.mod  ccs.thm  colist.thm  combinators.mod  combinators.thm  conat.thm  copy.mod  copy.thm  core-ml.mod  core-ml.thm  cr.mod  cr.sig  cr.thm  cut.mod  cut.sig  cut.thm  debruijn.mod  debruijn.sig  debruijn.thm  ded.mod  ded.thm  eval.mod  eval.thm  even-odd.thm  finite-pic-index.html  finite-pic.mod  finite-pic.sig  finite-pic.thm  focus.mod  focus.thm  (+69 more)
examples/compute/: mll.thm  nat.mod  nat.sig  nats.thm  rels.thm
examples/css/: style-src.css
examples/damf/: fileA.thm  fileB.thm  fileC.thm
examples/elf/: a.elf  cutelim.elf  cutelim.thm  debruijn.elf  debruijn.thm  impcut.elf  impcut.thm  lc.elf  lc.thm  lc_diverge.elf  lc_diverge.thm  test.elf  test.thm  unique.elf  unique.thm
examples/first-order/: ackermann.thm  add.thm  cut.mod  gcd.sig  gcd.thm  lists.mod  lists.sig  lists.thm
examples/hhw/: bred.mod  bred.sig  bred.thm  bred_alt.mod  bred_alt.sig  breduce.mod  breduce.sig  breduce.thm  breduce_bn.mod  breduce_bn.sig  breduce_bn.thm  breduce_bv.mod  breduce_bv.sig  breduce_bv.thm  debruijn_hohh.mod  debruijn_hohh.sig  debruijn_hohh.thm  debrujin_hohh.mod  debrujin_hohh.sig  debrujin_hohh.thm  fsub.mod
examples/higher-order/: bred_alt.thm  breduce.mod  breduce.thm  debruijn_ho.mod  debruijn_ho.sig  debruijn_ho.thm  fsub.sig  fsub.thm
examples/html-files/: annotate_lprolog.rb  annotate_mod.rb  annotate_thm.rb  details.php  details.rhtml  main.php  main.rhtml
examples/ipfs/: fileB.thm
examples/lambda-calculus/: cr.thm  eval.thm  sred.mod  sred.sig  sred.thm
examples/lambda-calculus/exsub-sn/: add.mod  add.sig  add.thm  beta-sn.mod  beta-sn.sig  beta-sn.thm  beta.thm  conf.thm  index.html  lambda-sigma.mod  lambda-sigma.sig  lambda-sigma.thm  multistep.mod  multistep.sig  multistep.thm  sigma-strong.mod  sigma-strong.sig  sigma-strong.thm  snf.thm  strong-ext.mod  strong-ext.sig  strong-ext.thm  strong-norm.mod  strong-norm.sig  strong-norm.thm  typing.mod  typing.sig  typing.thm
examples/lambda-calculus/fcurry/: fcurry.mod  fcurry.sig  fcurry.thm
examples/lambda-calculus/normalization/: sn2.mod  sn2.thm  stlc-strong-norm.mod  stlc-strong-norm.thm  stlc-weak-norm.mod  stlc-weak-norm.sig  stlc-weak-norm.thm
examples/lambda-calculus/term-structure/: debruijn-hohh.mod  debruijn-hohh.sig  debruijn-hohh.thm  debruijn.thm  normal.thm  path.mod  path.sig  path.thm
examples/lambda-calculus/type-uniq/: tu.html  type-uniq-fresh.thm  type-uniq-lg.thm  type-uniq-single.thm  type-uniq.mod  type-uniq.thm
examples/logic/: cut.thm  equiv.thm  focus.thm  hh_meta.thm  seq.thm
examples/logic/equivalence/: combinators.sig  combinators.thm  equiv.mod  equiv.sig  nd-to-seq.sig
examples/logic/focusing/: focus.sig
examples/misc/: cascade.thm  copy.thm  flex-rigid.thm  hidden.mod  hidden.sig  hidden.thm  higher-order.mod  higher-order.sig  higher-order.thm  subst.mod  subst.thm  umt.thm  well-founded.thm
examples/process-calculi/: ccs.thm
examples/process-calculi/ccs/: ccs.mod  ccs.thm  ccs_bisim.thm  ccs_bisim_context.thm  ccs_bisim_context_examples.thm  ccs_bisim_examples.thm  (+4 more)
examples/programming-languages/: ees.mod  ees.sig  ees.thm  pcf.thm  poplmark-1a.thm  poplmark-2a.mod  poplmark-2a.thm  poplmark-hohh.mod  poplmark-hohh.sig  poplmark-hohh.thm
examples/schema/: breduce.sig  breduce.thm  copy.mod  copy.sig  copy.thm  proj.thm  type-uniq.mod  type-uniq.sig  type-uniq.thm  unit.mod  unit.sig  unit.thm
examples/schm-poly/: append.mod  append.sig  reasoning-append.thm  schm-poly-fails.thm  schm_poly_fails.thm  schm_poly_tst.thm  spec-append.thm
libs/: _tags
libs/ounit/: OUnit.mllib  oUnit.ml
libs/pprint/: PPrint.ml  PPrintBracket.ml  PPrintBracket.mli  PPrintCombinators.ml  PPrintCombinators.mli  PPrintEngine.ml  PPrintEngine.mli  PPrintLib.mllib  PPrintOCaml.ml  PPrintOCaml.mli  PPrintRenderer.ml  PPrintTest.ml
poly-test/: schm_poly_tst.mod  schm_poly_tst.sig  schm_poly_tst.thm  tyunif.ml
src/: .ocamlinit  Makefile  Makefile.in  OMakefile  TODO.txt  _tags  abella-lang.json  abella-tool.json  abella.OCAML312  abella.ml  abella_dep.ml  abella_doc.ml  abella_doc_dist.ml  abella_driver.ml  abella_types.ml  accumulate.ml  add.mod  add_comm.thm  checks.ml  clause.ml  clauses.ml  command.ml  compute.ml  context.ml  context_test.ml  copy.mod  copy.thm  copy_exe.ml  cut.mod  cut.thm  damf_cids.ml  debug.ml  depend.ml  dune  essai.ml  eval.mod  eval.thm  extensions.ml  file_cache.ml  filepath.ml  (+84 more)
src/ext/: oUnit.ml
src/js/: .merlin  Makefile  _tags  abella_js.ml
src/ndcore/: OMakefile  index.ml  index.mli  ndcore_test.ml  norm.ml  norm_test.ml  pprint.ml  pprint_test.ml  term.ml  term.mli  term_test.ml  test.ml  unify.ml  unify.mli  unify_test.ml
src/tools/: dune  ppx_abella.ml  ppx_abella_lib.ml
support/: .gitignore  dune  package-lock.json  package.json  tailwind.config.js  tsconfig.json
support/css/: abella_doc.css
support/ts/: abella_doc.ts
test/: .ocamlinit  Makefile  _tags  dune  regress.ml  setup_regression.ml  test.ml  test_context.ml  test_graph.ml  test_helper.ml  test_metaterm.ml  test_parser.ml  test_prover.ml  test_subordination.ml  test_tactics.ml  test_term.ml  test_typing.ml  test_unify.ml  typ.ml
test/ext/: _tags  oUnit.ml
try/: abella_ctrl.js  main.js  try.css  try.html
try/ace/: mode-abella.js  mode-lprolog.js
try/examples/: ccs.sig  empty.mod  empty.sig  hh_meta.thm  pic.thm  poplmark-1a.mod  poplmark-2a.sig  poplmark-2a.thm  stlc-uniq.thm  stlc.mod  stlc.sig
(+37 files in other folders)
