opam-version: "2.0"
name: "abella"
version: "2.0.8-rc1"
synopsis: "Interactive theorem prover based on lambda-tree syntax"
maintainer: "kaustuv@chaudhuri.info"
authors: [
  "Andrew Gacek"
  "Yuting Wang"
  "Kaustuv Chaudhuri"
]
homepage: "https://abella-prover.org"
license: "GPL-3.0-only"
build: [
  [make "all-release" "abella.install"]
]
depends: [
  "ocaml" { >= "4.12.0" }
  "cmdliner" { >= "1.2.0" & build }
  "menhir" { >= "20211012" & build }
  "dune" { >= "3.11" & build }
  "crunch" { >= "3.3.0" & build }
  "yojson" { >= "2.1.1" & build }
  "ounit2" { with-test }
]
bug-reports: "https://github.com/abella-prover/abella/issues"
dev-repo: "git+https://github.com/abella-prover/abella.git"
