opam-version: "2.0"
name: "abella"
version: "2.0.8.2"
synopsis: "Interactive theorem prover based on lambda-tree syntax"
maintainer: "kaustuv@chaudhuri.info"
authors: [
  "Andrew Gacek"
  "Yuting Wang"
  "Kaustuv Chaudhuri"
]
homepage: "https://abella-prover.org"
license: "GPL-3.0-only"
build: [
  [ make
    "BYTECODE=true" { arch = "ppc32" | arch = "ppc64" }
    "all-release"
    "abella.install" ]
]
depends: [
  "ocaml"     { >= "4.12.0" }
  "base64"    { >= "3.5.1" }
  "cmdliner"  { >= "1.2.0" }
  "menhir"    { >= "20211012" }
  "ocurl"     { >= "0.9.2" }
  "re"        { >= "1.11.0" }
  "yojson"    { >= "2.1.1" }
  "dune"      { >= "3.7" }
  "ounit2"    { with-test }
]
bug-reports: "https://github.com/abella-prover/abella/issues"
dev-repo: "git+https://github.com/abella-prover/abella.git"
