(executable
  (name abella)
  (modes byte exe)
  (modules abella)
  (libraries abella_lib unix cmdliner))

(executable
  (name abella_doc)
  (modes byte exe)
  (modules abella_doc)
  (libraries abella_lib unix cmdliner))

(executable
  (name abella_dep)
  (modes byte exe)
  (modules abella_dep)
  (libraries abella_lib unix cmdliner))

(library
  (name abella_lib)
  (modules :standard \ abella abella_doc abella_dep)
  (libraries yojson)
  (wrapped false))

(ocamllex
  (modules lexer))

; (ocamlyacc
;   (modules parser))

(menhir
  (modules parser)
  (infer true)
  (flags --explain))

(alias
  (name default)
  (deps abella.bc abella_doc.bc abella_dep.bc))